# der_revenue_engine

./: .gitignore  .pre-commit-config.yaml  README.md  environment.yml  pyproject.toml  streamlit_app.py
.streamlit/: config.toml  config.toml.bak
dre/: __init__.py  config.py  io.py  models.py
dre/catalog/: dsire_catalog.py
dre/clients/: dsire.py  openei.py  pjm.py
dre/estimators/: __init__.py  merchant.py
dre/markets/: catalog.py  demand_response.py
dre/markets/pjm/: cache.py  estimate_energy.py  estimate_frequency.py  estimate_reserves.py  feeds.py  io.py  prefetch_cli.py
dre/ops/: dsire_db.py  iso_locator.py  pudl_fetch.py
dre/ui/: iso_panel.py
pages/: 01_Home_and_projects.py  02_Project_inputs_wizard.py  03_Services_and_programs.py  04_Merchant_overlay.py  05_Merchant_programs.py  05_Risk_and_haircuts.py  06_Underwriting.py  07_Reporting_and_audit.py  08_Downloads.py
projects/oak_brook_center_test/: load.csv  site_bundle.json
projects/oak_brook_center_test_2/: site_bundle.json
projects/test/: site_bundle.json
projects/test_2/: site_bundle.json
tools/: prefetch_pjm_cache.py
