[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "der_revenue_engine"
version = "0.0.1"
description = "DER Development Platform MVP"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Evan Murphy" }]

# We will manage runtime deps with environment.yml, so none here.

[tool.setuptools]
packages = ["dre"]  # explicitly package only the dre module

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "I", "UP", "B"]
fix = true
exclude = ["data", "outputs"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true

[project.scripts]
dre-dsire-db = "dre.ops.dsire_db:app"
